--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Portfolio</title>
-<link rel="icon" type="image/x-icon" href="/favicon/favicon.ico" />
+<link rel="icon" type="image/x-icon" href="favicon.ico" />
 <style>
   body {
     background-color: #1c1a22;
@@ -187,26 +187,26 @@
 
   <script>
     const images = [
-      "Images/mouserender1.png",
-      "Images/turretrender1.png",
-      "Images/turretrender2.png",
-      "Images/dboiaccendrender1finished1watermarked1.png",
-      "Images/1920x1080scp939bannerrender1finishedNOWATERMARK.png",
-      "Images/chaosarmoredrender1finished3NOWATERMARK1.png",
-      "Images/chaosarmoredrender1finished2NOWATERMARK1.png",
-      "Images/mtfvschaosrender2finished1NOWATERMARK.png",
-      "Images/mtfvschaosrender1finished1NOWATERMARK.png",
-      "Images/ScientistRender1NOWATERMARK.png",
-      "Images/CIRender2.png",
-      "Images/pfpnew.png",
-      "Images/CIRender1View1NOWATERMARK.png",
-      "Images/CIRendr1View2NOWATERMARK.png",
+      "mouserender1.png",
+      "turretrender1.png",
+      "turretrender2.png",
+      "dboiaccendrender1finished1watermarked1.png",
+      "1920x1080scp939bannerrender1finishedNOWATERMARK.png",
+      "chaosarmoredrender1finished3NOWATERMARK1.png",
+      "chaosarmoredrender1finished2NOWATERMARK1.png",
+      "mtfvschaosrender2finished1NOWATERMARK.png",
+      "mtfvschaosrender1finished1NOWATERMARK.png",
+      "ScientistRender1NOWATERMARK.png",
+      "CIRender2.png",
+      "pfpnew.png",
+      "CIRender1View1NOWATERMARK.png",
+      "CIRendr1View2NOWATERMARK.png",
     ];
 
     const transparentImages = [
-      "Images/mouserender1.png",
-      "Images/turretrender1.png",
-      "Images/turretrender2.png",
+      "mouserender1.png",
+      "turretrender1.png",
+      "turretrender2.png",
       // Add more known transparent PNGs here
     ];
 
