--- a/index.html
+++ b/index.html
@@ -201,12 +201,14 @@
       "pfpnew.png",
       "CIRender1View1NOWATERMARK.png",
       "CIRendr1View2NOWATERMARK.png",
+      "orangerender1.png",
     ];
 
     const transparentImages = [
       "mouserender1.png",
       "turretrender1.png",
       "turretrender2.png",
+      "orangerender1.png",
       // Add more known transparent PNGs here
     ];
 
@@ -325,3 +327,4 @@
   </script>
 </body>
 </html>
+
