--- a/index.html
+++ b/index.html
@@ -202,6 +202,11 @@
       "CIRender1View1NOWATERMARK.png",
       "CIRendr1View2NOWATERMARK.png",
       "orangerender1.png",
+      "lowpollyshottyrender1",
+      "lowpollyshottyrender2",
+      "lowpollyshottyrender3",
+      "lowpollyshottyrender4",
+      "lowpollyshottyrender5",
     ];
 
     const transparentImages = [
@@ -209,6 +214,10 @@
       "turretrender1.png",
       "turretrender2.png",
       "orangerender1.png",
+      "lowpollyshottyrender1",
+      "lowpollyshottyrender2",
+      "lowpollyshottyrender3",
+      "lowpollyshottyrender4",
       // Add more known transparent PNGs here
     ];
 
@@ -327,4 +336,5 @@
   </script>
 </body>
 </html>
+
 
