--- a/index.html
+++ b/index.html
@@ -202,11 +202,11 @@
       "CIRender1View1NOWATERMARK.png",
       "CIRendr1View2NOWATERMARK.png",
       "orangerender1.png",
-      "lowpollyshottyrender1",
-      "lowpollyshottyrender2",
-      "lowpollyshottyrender3",
-      "lowpollyshottyrender4",
-      "lowpollyshottyrender5",
+      "lowpollyshottyrender1.png",
+      "lowpollyshottyrender2.png",
+      "lowpollyshottyrender3.png",
+      "lowpollyshottyrender4.png",
+      "lowpollyshottyrender5.png",
     ];
 
     const transparentImages = [
@@ -336,5 +336,6 @@
   </script>
 </body>
 </html>
+
 
 
