--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<meta name="google-site-verification" content="EO_qnh-UZKmpvvSXOaZvVe4cisu1npxSwAuurtKU2K8" />
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Portfolio</title>
@@ -336,6 +337,7 @@
   </script>
 </body>
 </html>
+
 
 
 
