--- a/index.html
+++ b/index.html
@@ -215,10 +215,10 @@
       "turretrender1.png",
       "turretrender2.png",
       "orangerender1.png",
-      "lowpollyshottyrender1",
-      "lowpollyshottyrender2",
-      "lowpollyshottyrender3",
-      "lowpollyshottyrender4",
+      "lowpollyshottyrender1.png",
+      "lowpollyshottyrender2.png",
+      "lowpollyshottyrender3.png",
+      "lowpollyshottyrender4.png",
       // Add more known transparent PNGs here
     ];
 
@@ -337,6 +337,7 @@
   </script>
 </body>
 </html>
+
 
 
 
