--- a/index.html
+++ b/index.html
@@ -208,6 +208,7 @@
       "lowpollyshottyrender3.png",
       "lowpollyshottyrender4.png",
       "lowpollyshottyrender5.png",
+      "pistolrender1.png",
     ];
 
     const transparentImages = [
@@ -337,6 +338,7 @@
   </script>
 </body>
 </html>
+
 
 
 
