--- a/index.html
+++ b/index.html
@@ -209,6 +209,8 @@
       "lowpollyshottyrender4.png",
       "lowpollyshottyrender5.png",
       "pistolrender1.png",
+      "kniferender3.png",
+      "kniferender4.png",
     ];
 
     const transparentImages = [
@@ -220,6 +222,8 @@
       "lowpollyshottyrender2.png",
       "lowpollyshottyrender3.png",
       "lowpollyshottyrender4.png",
+      "kniferender3.png",
+      "kniferender4.png",
       // Add more known transparent PNGs here
     ];
 
@@ -338,6 +342,7 @@
   </script>
 </body>
 </html>
+
 
 
 
