--- a/index.html
+++ b/index.html
@@ -211,6 +211,8 @@
       "pistolrender1.png",
       "kniferender3.png",
       "kniferender4.png",
+      "e11lowpolyrender1",
+      "e11lowpolyrender2",
     ];
 
     const transparentImages = [
@@ -224,6 +226,8 @@
       "lowpollyshottyrender4.png",
       "kniferender3.png",
       "kniferender4.png",
+      "e11lowpolyrender1",
+      "e11lowpolyrender2",
       // Add more known transparent PNGs here
     ];
 
@@ -342,6 +346,7 @@
   </script>
 </body>
 </html>
+
 
 
 
