--- a/index.html
+++ b/index.html
@@ -211,8 +211,8 @@
       "pistolrender1.png",
       "kniferender3.png",
       "kniferender4.png",
-      "e11lowpolyrender1",
-      "e11lowpolyrender2",
+      "e11lowpolyrender1.png",
+      "e11lowpolyrender2.png",
     ];
 
     const transparentImages = [
@@ -226,8 +226,8 @@
       "lowpollyshottyrender4.png",
       "kniferender3.png",
       "kniferender4.png",
-      "e11lowpolyrender1",
-      "e11lowpolyrender2",
+      "e11lowpolyrender1.png",
+      "e11lowpolyrender2.png",
       // Add more known transparent PNGs here
     ];
 
@@ -346,6 +346,7 @@
   </script>
 </body>
 </html>
+
 
 
 
