--- a/index.html
+++ b/index.html
@@ -213,6 +213,8 @@
       "kniferender4.png",
       "e11lowpolyrender1.png",
       "e11lowpolyrender2.png",
+      "epsilonlogo13d1.png",
+      "epsilonlogo13d3.png",
     ];
 
     const transparentImages = [
@@ -228,6 +230,7 @@
       "kniferender4.png",
       "e11lowpolyrender1.png",
       "e11lowpolyrender2.png",
+      "epsilonlogo13d1.png",
       // Add more known transparent PNGs here
     ];
 
@@ -346,6 +349,7 @@
   </script>
 </body>
 </html>
+
 
 
 
