--- a/index.html
+++ b/index.html
@@ -215,6 +215,9 @@
       "e11lowpolyrender2.png",
       "epsilonlogo13d1.png",
       "epsilonlogo13d3.png",
+      "spooky1.png",
+      "spooky2.png",
+      "spooky3.png",
     ];
 
     const transparentImages = [
@@ -231,6 +234,9 @@
       "e11lowpolyrender1.png",
       "e11lowpolyrender2.png",
       "epsilonlogo13d1.png",
+      "spooky1.png",
+      "spooky2.png",
+      "spooky3.png",
       // Add more known transparent PNGs here
     ];
 
@@ -349,6 +355,7 @@
   </script>
 </body>
 </html>
+
 
 
 
